fixed image alignment

--- a/app/components/Showcase/showcase.module.css
+++ b/app/components/Showcase/showcase.module.css
@@ -44,6 +44,7 @@
 }
 .splash img{
     width: 100%;
+    object-fit: contain;
 }
 
 .wrapper{
